# cooking-recipe-fastapi

./: .gitignore  README.md  pyproject.toml
cooking_recipe_fastapi/: main.py  recipes_data.py  schemas.py
tests/: test_main.py  test_recipes_data.py
